@@ -106,11 +106,23 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Load .env file
+        run: |
+          if [ -f .env ]; then
+            while IFS= read -r line || [ -n "$line" ]; do
+              if [[ $line != '#'* ]] && [[ $line == *'='* ]]; then
+                echo "$line" >> $GITHUB_ENV
+              fi
+            done < .env
+          fi    
       - name: docker buildx bake "#1"
         uses: docker/bake-action@v5
         with:
+          workdir: etc/release
           set: |
             *.platform=${{ env.DOCKER_BAKE_PLATFORM }}
+            *.args.DOCKER_REPOSITORY=${{ env.DOCKER_REPOSITORY }}
+            *.args.DOCKER_LIQUIBASE_DOOKUG=${{ env.DOCKER_LIQUIBASE_DOOKUG }}
           push: true
           files: |
             docker-compose.yml
