@@ -1,21 +1,0 @@
-name: pre-commit
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-jobs:
-  pre-commit:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-      - name: Install pre-commit
-        run: pip install pre-commit
-      - name: Run pre-commit hooks
-        run: pre-commit run --all-files
