@@ -1,6 +1,0 @@
-.git
-.github
-docs
-docs-readme
-LICENSES
-.reuse
