@@ -1,13 +1,0 @@
-{{ comment_start }} Copyright {{ year }} {{ copyright_holder }}
-{{ comment_start }} 
-{{ comment_start }} Licensed under the Apache License, Version 2.0 (the "License");
-{{ comment_start }} you may not use this file except in compliance with the License.
-{{ comment_start }} You may obtain a copy of the License at
-{{ comment_start }} 
-{{ comment_start }}     http://www.apache.org/licenses/LICENSE-2.0
-{{ comment_start }} 
-{{ comment_start }} Unless required by applicable law or agreed to in writing, software
-{{ comment_start }} distributed under the License is distributed on an "AS IS" BASIS,
-{{ comment_start }} WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-{{ comment_start }} See the License for the specific language governing permissions and
-{{ comment_start }} limitations under the License.
