@@ -18,7 +18,6 @@
             <column name="template_part_id" value="TEMPLATEPARTXID7"/>  
             <column name="content"          value="Welcome message!"/>  
             <column name="compressed"       valueNumeric="0"/>  
-            <column name="validity_start"   valueDate="2023-06-19T11:30:00"/>  
         </insert>    
                 
     </changeSet>
