@@ -1,0 +1,23 @@
+<?xml version="1.0" encoding="UTF-8"?>
+    <!DOCTYPE defaultProperties SYSTEM "common/params.dtd">
+    <databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-4.3.xsd">
+
+    <!-- include the default properties -->
+    &propertiesAll;
+
+   <changeSet id="0051" author="jozsef.holczer" labels="01.01.00" >
+        <comment>DKG-297 drop validity_start, validity_end cols from template_part_content.</comment>
+    
+        <dropColumn 
+            schemaName="${schema_name}"
+            tableName="template_part_content">
+            <column name="validity_start"/>
+            <column name="validity_end"/>
+        </dropColumn>
+      
+   </changeSet>
+
+</databaseChangeLog>
