@@ -12,6 +12,7 @@
     <include file="liquibase-dookug-00.04.00.xml" relativeToChangelogFile="true"/>
     <include file="liquibase-dookug-00.05.00.xml" relativeToChangelogFile="true"/>
     <include file="liquibase-dookug-01.00.00.xml" relativeToChangelogFile="true"/>
+    <include file="liquibase-dookug-01.01.00.xml" relativeToChangelogFile="true"/>
     
     <!-- Postgres post operations -->
     <include file="./common/post_install/postgresql/refresh_table_roles.sql" relativeToChangelogFile="true"/>
